--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 {% endcomment %} {% endblock %} -->
 <!-- <div w3-include-html="MauPortfolio/templates/base.html"></div> -->
-{% load static %}
+<!-- {% load static %} -->
 
 
 <!DOCTYPE html>
