--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>
       </div>
 
-      {% comment %}
+      <!-- {% comment %}
       <div class="container">{% block content %} {% endblock %}</div>
-      {% endcomment %}
+      {% endcomment %} -->
     </header>
 
     <div class="container">
@@ -88,10 +88,10 @@
       </div>
     </div>
 
-    {% comment %} About Section {% endcomment %}
+    <!-- {% comment %} About Section {% endcomment %} -->
 
     <div id="about" class="contaier bg-dark bg-opacity-50 text-light">
-      {% comment %} About me {% endcomment %}
+      <!-- {% comment %} About me {% endcomment %} -->
       <br />
       <div class="container">
         <div class="section-title">
@@ -177,7 +177,7 @@
 
       <br />
       <br />
-      {% comment %} skills {% endcomment %}
+      <!-- {% comment %} skills {% endcomment %} -->
       <div class="skills container">
         <div class="section-title">
           <h2>Skills</h2>
@@ -271,7 +271,7 @@
 
     <br>
 
-    {% comment %} RESUME {% endcomment %}
+    <!-- {% comment %} RESUME {% endcomment %} -->
     <div id="resume" class="resume contanier bg-dark bg-opacity-55 text-light">
       <div class="container">
 
@@ -346,7 +346,7 @@
     <br>
 
 
-    {% comment %} SERVICES {% endcomment %}
+    <!-- {% comment %} SERVICES {% endcomment %} -->
     <div id="services" class="services contanier bg-dark bg-opacity-50 text-light">
       <div class="container">
         <br>
@@ -388,7 +388,7 @@
 
     <br>
 
-    {% comment %} Portfolio {% endcomment %}
+    <!-- {% comment %} Portfolio {% endcomment %} -->
     <div id="portfolio" class="portfolio container bg-dark bg-opacity-55 text-light">
       <div class="container">
 
@@ -444,7 +444,7 @@
 
     <br>
 
-    {% comment %} Contact {% endcomment %}
+    <!-- {% comment %} Contact {% endcomment %} -->
     <div id="contact" class="contact contanier bg-dark bg-opacity-50 text-light">
       <div class="container">
 
@@ -516,7 +516,7 @@
 
     <br>
 
-    {% comment %} Credits {% endcomment %}
+    <!-- {% comment %} Credits {% endcomment %} -->
 
 
     
