--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             >
               <div class="navbar-nav">
                 <ul>
-                  <li><a class="nav-link" href="#">Home</a></li>
+                  <li><a class="nav-link" href="#header">Home</a></li>
                   <li><a class="nav-link" href="#about">About</a></li>
                   <li><a class="nav-link" href="#resume">Resume</a></li>
                   <li><a class="nav-link" href="#services">Services</a></li>
