--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col-lg-8">
         <div class="text-center">
           <div class="container-fluid">
-            <h1><a href="/index.html">Maureen Labarinto</a></h1>
+            <h1><a href="/MauPortfolio/">Maureen Labarinto</a></h1>
           </div>
           <h2>
             To be part of a company that will help me enhance my knowledge and
@@ -53,7 +53,7 @@
             >
               <div class="navbar-nav">
                 <ul>
-                  <li><a class="nav-link" href="/index.html">Home</a></li>
+                  <li><a class="nav-link" href="/MauPortfolio/">Home</a></li>
                   <li><a class="nav-link" href="#about">About</a></li>
                   <li><a class="nav-link" href="#resume">Resume</a></li>
                   <li><a class="nav-link" href="#services">Services</a></li>
